@@ -1,3 +1,8 @@
+2021-07-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* synctex-main.c (synctex_test_file):
+	Output not "compress mode" but "io mode".
+
 2021-03-23  Karl Berry  <karl@tug.org>
 
 	* TL'21.
